--- a/eclipse/TomcatOraclePractica/.settings/org.eclipse.wst.common.component
+++ b/eclipse/TomcatOraclePractica/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Primeros_pasos_JSP">
+    <wb-module deploy-name="TomcatOraclePractica">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="Primeros_pasos_JSP"/>
-        <property name="java-output-path" value="/Primeros_pasos_JSP/build/classes"/>
+        <property name="context-root" value="TomcatOraclePractica"/>
+        <property name="java-output-path" value="/TomcatOraclePractica/build/classes"/>
     </wb-module>
 </project-modules>
